fixed some spacing

--- a/components/Album/styles/Album.module.css
+++ b/components/Album/styles/Album.module.css
@@ -16,7 +16,7 @@
   align-items: flex-start;
   display: flex;
   justify-content: center;
-  padding-bottom: 86px;
+  padding: 30px 0 56px 0;
 }
 
 .container {
